api/presentation/2.0/2014-02-18-spec.md
---
title: Presentation API 2.0
title_override: "IIIF Presentation API 2.0"
id: presentation-api
layout: sub-page
permalink: index.html
date: 2014-02-18
categories: [specifications, presentation-api]
major: 2
minor: 0
patch: 0
pre: draft1
---

<style>
.usage { margin: 0px; padding-top: 0px; padding-bottom: 2px; font-style: italic; }
dd ul li { margin: 0px; padding: 0px; }
dd ul { margin: 0px; padding-top: 0px; padding-bottom: 0px }
dt {font-weight: bold;}

.examplelist li {
  margin-bottom: 8px;
}

.examplelist li code {
  background: #eee;
  border: 1px dashed #bbb;
  padding: 3px;  
}

.CodeRay {background: #eee; border: 1px dashed #bbb; padding-left: 5px ; margin-left: 30px;}
.string {color: #209020;}
.comment {font-style: italic; color: #909090;}
.key {color: #202090;}
.integer {color: #902020;}
.error {color: red; font-weight: bold; font-size: +1;}

pre {
  margin-top: 8px; 
  margin-bottom: 8px;
}

.urltemplate { 
  background: #eee; 
  border: 1px dashed #bbb; 
  padding-left: 5px ; 
  margin-left: 30px;
  margin-right: 30px; 
  padding-top: 5px; 
  padding-bottom: 5px; 
}


body { line-height: 1.1;}

.specbody { 
  margin-left: 10px;
  margin-right: 10px;
}

.names { margin-top: 2px;}
.names li { padding-top: 0px; line-height: 1.1; list-style: none;}

p { margin-top: 8px; margin-bottom: 8px;}

.sub-pages-container .presentation-api .names li {
  line-height: 1.1;
  padding-left: 0;
}

.specbody h2 {
  color: #2f353e;
  font-family: 'Raleway', Arial, sans-serif;
  font-weight: 300;
  letter-spacing: 1px;
  margin-top: 10px;
}

.specbody h3 {
  margin-top: 10px;
}

.specbody h4 {
  margin-top: 10px;
}

.mytoc ol {
  margin: 0px;
  margin-top: 2px;
}

dt {
  margin-top: 8px;
}

.rfc {
  color: #d55;
  font-variant: small-caps;
  font-style: normal;
  font-size: 1.2em;
}

.legend { 
  width: 50%;
}

table {
  border: 1px solid black;
}

tr {
  border: 1px solid #666;
}

td, th {
  border: 1px solid #666;
  padding: 3px;
}

#markdown-toc li {
  list-style-type: none;
  padding-top: 0px; 
  padding-bottom: 0px; 
  line-height: 1.1;

  margin-top: 8px;
  margin-bottom: 8px;
}
#markdown-toc ul {
  margin-top: 8px;
  margin-bottom: 8px;
}

</style>

<div class="specbody">

## Status of this Document
{:.no_toc}
__This Version:__ {{ page.major }}.{{ page.minor }}.{{ page.patch }}{% if page.pre != 'final' %}-{{ page.pre }}{% endif %}

__Latest Stable Version:__ {{ site.presentation_api.latest.major }}.{{ site.presentation_api.latest.minor }}.{{ site.presentation_api.latest.patch }}

_Copyright © 2012-2014 Editors and contributors. Published by the IIIF under the CC-BY license._

**Editors**

  * Benjamin Albritton, _Stanford University_
  * Michael Appleby, _Yale University_
  * Robert Sanderson, _Stanford University_
  * Jon Stroop, _Princeton University_
  {: .names}

## Abstract
{:.no_toc}
This document describes an API to deliver structural and presentation information about digital content proposed by the International Image Interoperability Framework (IIIF) group. The IIIF Presentation API specifies a web service that returns JSON-LD structured documents that together describe how the structure and layout of a digitized object can be made available in a standard manner. Many different styles of viewer can be implemented that consume the information to enable a rich and dynamic experience for their users across collections and hosting institutions.

Please send feedback to [iiif-discuss@googlegroups.com][1]

## Table of Contents
{:.no_toc}

* Table of Discontent (will be replaced by macro)
{:toc}

##  1. Introduction

Access to image-based resources is fundamental to many research disciplines, scholarship and the transmission of cultural knowledge. Digital images are a container for much of the information content in the Web-based delivery of images, museum objects, books, newspapers, letters, manuscripts, maps, scrolls, single sheet collections, and digital surrogates of textiles, realia and ephemera.  Collections of born-digital images can also benefit from a standardized method to structure their layout and presentation, such as slideshows, image carousels, web comics, and more.

This document describes how the structure and layout of a complex image-based object can be made available in a standard manner. Many different styles of viewer can be implemented that consume the information to enable a rich and dynamic experience for their users across collections and hosting institutions.

An object may comprise a series of pages, surfaces or other views; for example the single view of a painting, the two sides of a photograph, four cardinal views of a statue, or the many pages of an edition of a newspaper or book. As such the primary requirements for the Presentation API are to provide an order for these views, the resources needed to display a representation of the view, and the information needed to allow the user to understand what is being seen.

The principles of Linked Data and the Architecture of the Web are adopted in order to provide a distributed and interoperable system. The [Shared Canvas data model][24] is leveraged in a specific, JSON-based format that is easy to implement without understanding RDF, but is still compatible with it.

### 1.1. Objectives and Scope

The objective of the IIIF Presentation API is to provide the information necessary to allow a rich, online viewing environment for primarily image-based objects to be presented to a user, likely in conjunction with the IIIF Image API. This is the sole purpose of the API; to provide easy access to the information necessary for a viewer to present an appropriate user experience for the digitized content. Therefore the descriptive information is given in a way that is human readable, but not semantically available to machines. In particular, it explicitly does NOT aim to provide metadata that would drive discovery or user selection of the digitized objects. This specification is not concerned with in-document search, however that will be covered by a further document. Domain-specific features, such as geo-referencing of maps to real world locations, are also not covered but may be addressed in additional documents in the future.

The following are within the scope of the current document:

  * The display of digitized images associated with a particular physical object, or born-digital compound object.
  * Navigation between the pages, surfaces or views of the object.
  * The display of text, and resources of other media types, associated with the object or its pages – this includes descriptive information about the object, labels that can aid navigation such as numbers associated with individual pages, copyright or attribution information, etc.

The following are not within scope:

  * The discovery or selection of interesting digitized objects is not directly supported, however hooks to reference further resources are available.
  * Search within the object is not supported by the Presentation API; however this will be covered by a further related specification.

Note that in the following descriptions, "[physical] object" is used to refer to a physical object that has been digitized or the born-digital compound object, and "resources" refer to the digital resources that are the result of that digitization or creation process.

##  2. Motivating Use Cases

There are many different types of digitized resources, from ancient scrolls to modern newspapers, from medieval manuscripts to printed books, and from large maps to small photographs. Many of them bear texts, sometimes difficult to read either due to the decay of the physical object or lack of understanding of the script or language. The following use cases are motivations for this specification.

* A medieval manuscript that has had each page digitized, and the user should be able to step from the first page through to the end to view the images
* An early printed book that has had each page digitized and the transcribed text associated with each page.
* A large map where the image depicting it can be zoomed and panned for ease of inspection.
* A digitized newspaper with the text extracted automatically by Optical Character Recognition and linked to the individual line in its depiction
* A photograph, digitized front and back.
* A manuscript that has been disbound and is now separated across different institutions, some of which have digitized their leaves.
* An important diary that has had multiple digitizations over time as technology improves, any of which should be available to the user to compare
* A painting that has been re-used by erasing the original and painting over top of it, where the original artwork can be recovered using modern techniques of multi-spectral imaging.
* A manuscript where different, multi-spectral images of a single page, taken for the text reconstruction, are available to be displayed.
* A letter where pages are known to have existed, but have been lost or still exist but are too fragile to digitize without destroying them.
* Objects that are not basically rectangular.
* A page where only fragments of it remain, and they are not rectangular. These fragments are often digitized together, regardless of the page that they originally came from, and must be able to be associated with the correct pages separately.
* The same fragment, where the text is known from other witnesses, or can be otherwise inferred, which should be associated in the display of the object even though the physical content no longer exists.
* Older projects which only digitized the "interesting" sections of an object, such as the interesting or famous parts. Equivalently, they may have digitized those sections in more detail, and the rest to a lower quality.
* Disagreement between scholars as to the correct reconstruction of an object.
* A score where the music has been transcribed into modern notation, which should be associated with the page in the same way as transcribed text.
* The same score, where the music has been performed and recorded, which should be associated with the page so that the performance can be played to the user.
* Transcription of diagrams, formulae, charts or tables into individual images, or other digitally accessible resources.
* Structured texts, including chapters, sections, verses, books, articles, texts, where the structure is important for navigation around the document.
* Manuscripts that have been re-ordered, intentionally or otherwise, over time and the different sequences of pages are known.
* Books that have had additional fly-leaves or other artifacts added to them over time which are now historically important, but the user should be able to display the object as it was before they were added.
* Pages with foldouts, curtains or other additions that can be dynamically interacted with by the user to experience the different states that the object can be in.
* Multiple transcriptions, editions, translations or other sets of information that should be associated with the digitized object in a coherent and consistent fashion.

Collectively these use cases require a model in which one can characterize the digitized object (via the _Manifest_ resource), the order in which individual pages or surfaces are presented (the _Sequence_ resource), and the individual pages or surfaces (_Canvas_ resources). Each Canvas may have images and/or texts associated with it (_Content_ resources) to allow the page to be rendered. An object may also have parts; for example, a book may have chapters where several pages may be associated with a single chapter (a _Range_ resource) or there may be groups of content resource above the page level, such as all of the texts that make up a single transcription of a manuscript (a _Layer_ resource).

The need for these conceptual components, shown in italics above, was recognized in earlier work concerned with viewing complex digitized manuscripts. The IIIF Presentation metadata model is thus derived from this earlier work but has been extended to meet the additional practical needs when viewing and navigating other types of digitized content. The components and their use are described in the following sections.

##  3. Primary Resource Types

<div style="float:right; padding-right: 30px">
  <img src="/img/metadata-api/iiif-objects.png" height="400px"/><br/>
</div>

This specification makes use of the following primary resource types:

Manifest
:    The overall description of the structure of the digital representation of an object and the content resources needed to render it. It carries information needed for the viewer to present the digitized content to the user, such as a title and other descriptive information about the object or the intellectual work that it conveys.  Typically, each Manifest will describe how to present a single, digitized object such as a book, photograph, map, scroll, music score, letter, or statue.

Sequence
:    The order of the views of a physical object. As books may be rebound over time or the page order otherwise change, multiple Sequences are allowed.

Canvas
:    A container that represents a page or view and has content resources associated with it or with parts of it. The Canvas provides a frame of reference for the layout of the page. The concept of a Canvas is borrowed from standards like PDF and HTML, or applications like Photoshop and Powerpoint, where the display starts from a blank canvas and images, text and other resources are "painted" on to it.

Content
:    Content resources such as images or texts that are associated with a Canvas.

Each Manifest must, and is very likely to, have one Sequence, but may have more than one. Each Sequence must have one Canvas and is likely to have more than one. Each Canvas may have zero or more Content resources associated with it. Zero is unlikely, but represents the case where the page exists (or existed) but has not been digitized. This hierarchy is depicted below.

There are other types of resources including Annotation Lists, Annotations, Ranges and Layers, which are discussed later.

##  4. Presentation Fields

The following fields are defined by this specification, broken into four sections. Each field is repeatable, and most may be associated with any of the resource types:

####  4.1. Descriptive Fields

label
:   A human readable label, name or title for the object. This field is intended to be displayed as a short surrogate for the resource if a human needs to make a distinction between it and similar resources, for example between pages or between a choice of images to display.

    Usage:
    {: .usage}
    * A Manifest _must_{: .rfc} have a label, and it _should_{: .rfc} be the name of the physical object or title of the intellectual work that it embodies.
    * A Sequence  _may_{: .rfc} have a label, and if there are multiple Sequences in a single Manifest then they _must_{: .rfc} have labels. The label _should_{: .rfc} briefly convey the nature of sequence, such as "Current Page Order".
    * A Canvas _must_{: .rfc} have a label, and it _should_{: .rfc} be the page label such as "p. 1" or "folio 1 recto".
    * A Content resource _may_{: .rfc} have a label, and if there is a Choice of Content resource for the same Canvas, then they _must_{: .rfc} have labels. The label _should_{: .rfc} be a brief description of the resource, such as "black and white" versus "color photograph"

metadata
:   A list of short descriptive entries given as pairs of human readable label and value to be displayed by the client to the user. The value _should_{: .rfc} be either simple HTML, including links and text markup, or plain text, and the label _should_{: .rfc} be plain text. There are no semantics conveyed by this information, and clients should not use it for discovery or other purposes. This pool of descriptive pairs should be able to be displayed in a tabular form in the user interface. Descriptive pairs might be used to convey the author of the work, information about its creation, a brief physical description, or ownership information, amongst other use cases. The client is not expected to take any action on this information beyond displaying the label and value. An example pair of label and value might be a label of "Author" and a value of "Jehan Froissart". The client should display the pairs in the order provided by the description.  Clients _should_{: .rfc} have a way to display the information about Manifests and Canvases, and _may_{: .rfc} have a way to view the information about other resources.

    Usage:
    {: .usage}
    * A Manifest _should_{: .rfc} have descriptive pairs associated with it describing the object or work.
    * A Sequence _may_{: .rfc} have descriptive pairs associated with it to describe the difference between it and other Sequences.
    * A Canvas _may_{: .rfc} have descriptive pairs associated with it to describe particular features of that Canvas compared to others.
    * A Content resource _may_{: .rfc} have descriptive pairs associated with it.

description
:   A longer-form prose description of the object, intended to be conveyed to the user as a full text description, rather than a simple label and value. It can duplicate any of the above information, along with additional information required for the understanding of the digitized object, description of the physical object, bibliographic information and so forth. Like with the descriptive pairs in `metadata`, clients _should_{: .rfc} have a way to display the information about Manifests and Canvases, and _may_{: .rfc} have a way to view the information about other resources.

    Usage:
    {: .usage}
    * A Manifest _should_{: .rfc} have a description that describes the object or work.
    * A Sequence _may_{: .rfc} have a description to further explain how it differs from other Sequences.
    * A Canvas _may_{: .rfc} have a description to describe particular features of the view.
    * A Content resource _may_{: .rfc} have a description.  

thumbnail
:   A small image that represents the content of the object, such as the title page or significant image.  It is _recommended_{: .rfc} that a IIIF Image Service be available for this image for rescaling.

    Usage:
    {: .usage}
    * A Manifest _should_{: .rfc} have a thumbnail image that represents the entire object or work.
    * A Sequence _may_{: .rfc} have a thumbnail, particularly if there are multiple Sequences in a single Manifest. Each of the thumbnails _should_{: .rfc} be different.
    * A Canvas _may_{: .rfc} have a thumbnail, particularly if there are multiple images or resources that make up the representation.
    * A Content Resource _may_{: .rfc} have a thumbnail, particularly if there is a choice of resource.

####  4.2. Rights and Licensing Fields

attribution
:   A human readable label that _must_{: .rfc} be displayed when the resource it is associated with is displayed or used. For example this could be used to present copyright or ownership, or simply an acknowledgement of the owning and/or publishing institutions.

    Usage:
    {: .usage}
    * Any resource _may_{: .rfc} have an attribution label  

logo
:   A small image that represents an individual or organization associated with the object.  This could be the logo of the owning or hosting institution.  It is _recommended_{: .rfc} that a IIIF Image Service be available for this image for rescaling.

    Usage:
    {: .usage}
    * Any resource _may_{: .rfc} have a logo associated with it

license
:   A link to a resource that describes the license or rights statement under which the resource is being used. The rationale for this being a URI and not a human readable label is that typically there is one license for many resources, and the text is too long to be displayed to the user along with the object. If displaying the text is a requirement, then it is _recommended_{: .rfc} to include the information in an `attribution` field instead.  

    Usage:
    {: .usage}
    * Any resource _may_{: .rfc} have a license associated with it

####  4.3. Technical Fields

@id
:   The URI that identifies the resource. Recommended URI patterns are presented below.

    Usage:
    {: .usage}
    * A Manifest _must_{: .rfc} have an id, and it MUST be the http[s] URI at which the Manifest is published.
    * A Sequence _may_{: .rfc} have an id.
    * A Canvas _must_{: .rfc} have an id.
    * A Content Resource _must_{: .rfc} have an id unless it is embedded in the response, and it _must_{: .rfc} be the http[s] URI at which the resource is published.

@type
:   The type of the resource, either Manifest/Sequence/Canvas or drawn from a list of high level content types such as Image, Text or Audio.

    Usage:
    {: .usage}
    * All resources _must_{: .rfc} have a type specified.

format
:   The more specific media type (often called a MIME type) of a Content resource, for example "image/jpeg". This is important for distinguishing, for example, text in XML from plain text.

    Usage:
    {: .usage}
    * A Manifest, Sequence or Canvas _must not_{: .rfc} have a format.
    * A Content Resource _should_{: .rfc} have a format, and if so, it _must_{: .rfc} be the value of the Content-Type header returned when the resource is dereferenced.

height
:   The height of a Canvas or Image resource. For images, this is in pixels. No particular units are required for Canvases, as the dimensions provide an aspect ratio for the resources to be located within rather than measuring any physical property of the object.

    Usage:
    {: .usage}
    * A Manifest or Sequence _must not_{: .rfc} have a height.
    * A Canvas _must_{: .rfc} have a height, which does not have a unit type. It merely conveys, along with width, an aspect ratio.
    * Image Content Resources _should_{: .rfc} have a height, given in pixels.
    * Non-Image Content Resources _may_{: .rfc} have a height if appropriate, such as for video streams.

width
:   The width of a Canvas or Image resource. For images, this is in pixels. No particular units are required for Canvases.  
    Usage:
    {: .usage}
    * As for height above

viewingDirection
:   The direction that Canvases should be presented in a viewer for the object. Valid values are:

    * "left-to-right": The object is read from left to right, and is the default if not specified
    * "right-to-left": The object is read from right to left
    * "top-to-bottom": The object is read from the top to the bottom
    * "bottom-to-top": The object is read from the bottom to the top

    Usage:
    {: .usage}
    * A Manifest _may_{: .rfc} have a viewing direction, and if so, it applies to all of its Sequences.
    * A Sequence _may_{: .rfc} have a viewing direction, and it MAY be different to that of the Manifest
    * A Canvas or Content Resource _must not_{: .rfc} have a viewing direction.
    * A Range _may_{: .rfc} have a viewing direction.  

viewingHint
:   A hint to the viewer as to the most appropriate method of displaying the resource. Any value may be given, and this specification defines the following:

    * "individuals": Valid on Manifest, Sequence and Range. The canvases are all individual sheets, and should not be presented in a page-turning interface. For example a sequence of letters or photographs.
    * "paged": Valid on Manifest, Sequence and Range. The canvases represent pages in a bound volume, and should be presented in a page-turning interface.  The first canvas is a single view (the first recto) and thus the second canvas represents the back of the first canvas.
    * "continuous": Valid on Manifest, Sequence and Range.  The canvases each represent a complete side of a long scroll or roll and an appropriate rendering might only display part of the canvas at any given time rather than the entire object.
    * "non-paged": Only valid on a Canvas and when the Manifest or Sequence has a `viewingHint` of "paged".  Canvases with this hint MUST NOT be presented in a page turning interface, and skipped over when determining the sequence.
    * "start": Only valid on a Canvas. A client _should_{: .rfc} advance to the canvas with this `viewingHint` when beginning navigation through a sequence.  This allows the client to start with the first Canvas that contains interesting content rather than requiring the user to skip past blank or empty canvases manually.    
    * "top": Only valid on a Range. A range which has this `viewingHint` is the top-most node in a hierarchy of ranges that represents a structure to be rendered by the client to assist in navigation. For example, a table of contents within a paged object, major sections of a 3d object, textual areas within a single scroll, and so forth.  Other ranges that are descendants of the "top" range, given using the `within` construction, are the entries to be rendered in the navigation structure.  There _may_{: .rfc} be multiple ranges marked with this hint. If so, the client _should_{: .rfc} display a choice of multiple structures to navigate through.

    Usage:
    {: .usage}
    * A Manifest, Sequence or Range _may_{: .rfc} have a viewing hint, with scope as per viewingDirection.
    * A Canvas _may_{: .rfc} have a viewing hint, and if so it _must_ be either "non-paged" or "start".  "non-paged" is only valid if the Canvas is within a Manifest, Sequence or Range that is "paged", and the particular Canvas _must not_{: .rfc} be displayed in a page-turning viewer. A canvas _must not_{:. rfc} be both "non-paged" and "start". 
    * Content Resources _may_{: .rfc} have a viewing hint but there are no defined values in this specification.

####  4.4. Linking Fields

related
:   A link to an external resource that is related to the current resource and intended for rendering to the user, such as a video or academic paper about a manuscript, a link to the website of the newspaper, a description of the photograph, and so forth. A label and the format of the target resource _should_{: .rfc} be given if possible to assist clients in rendering the resource.  

    Usage:
    {: .usage}
    * Any resource _may_{: .rfc} have an external resource related to it.

service
:   A link to a service that makes more functionality available for the resource, such as from an image to the base URI of an [IIIF Image API service][26]. The service resource _should_{: .rfc} have additional information associated with it in order to allow the client to determine how to make appropriate use of it, such as a "profile" link to a service description. It _may_{: .rfc} also have relevant information copied from the service itself. This duplication is permitted in order to increase the performance of rendering the object without necessitating additional HTTP requests.

    Usage:
    {: .usage}
    * Any resource _may_{: .rfc} have a link to an external service.
    * Please see the [Service Profiles][1] document for known services.    

seeAlso
:   A link to a document that describes the resource in a machine readable way. This could be an XML or RDF record, such as in EAD, Dublin Core or Bibo schemas. The `profile` and `format` information should be given if possible.

    Usage:
    {: .usage}
    * Any resource _may_{: .rfc} have a seeAlso to an external description of it.

within
:   A link to a resource that contains the current resource, such as a collection of Manifests. This would allow linking upwards to collections that allow browsing of the digitized objects available, but is not within the scope of the current document.

    Usage:
    {: .usage}
    * Any resource _may_{: .rfc} be within a containing resource.

These metadata fields and requirements are depicted in the diagram below.

<img src="/img/metadata-api/iiif-objects-metadata.png" width="450px"/>

Other metadata fields are possible, either custom extensions or endorsed by the IIIF. If a client discovers fields that it does not understand, then it _must_{: .rfc} ignore them.


##  5. Requests and Responses

This section describes the recommended request and response patterns for the API that makes the presentation information available. The REST approach is followed where a call will retrieve a description of a resource, and additional calls may be made by following links obtained from within the description. All of the requests use the HTTP GET method; creation and update of resources is not covered by this specification.

###  5.1 Requests

Each of the sections below recommends a URI pattern to follow for the different resources. This is not required and clients _must not_{: .rfc} construct the URIs by themselves, instead they should follow links from within retrieved descriptions.

The Base URI recommended for resources made available by the API is:

```
{scheme}://{host}{/prefix}/{identifier}
```
{: .urltemplate}

Where the parameters are:

| Name | Description |
| ---- | ----------- |
| scheme | Indicates the use of the http or https protocol in calling the service. |
| server | The host server (and optional port) on which the service resides. |
| prefix | The path on the host server to the service. This prefix is optional, but may be useful when the host server supports multiple services. The prefix _may_{: .rfc} contain multiple path segments, delimited by slashes, but all other special characters _must_{: .rfc} be encoded. |
| identifier | The identifier of the requested image, expressed as a string. This may be an ark, URN, filename, or other identifier. Special characters _must_{: .rfc} be URI encoded. |
{: .image-api-table}

The individual resources _may_{: .rfc} have URIs below this top-level pattern in the same way as the IIIF Image API, by appending a "/" and the additional information to identify the resource required. If a client requests a URI without a trailing ".json", then the server _should_{: .rfc} return the JSON representations defined below.

###  5.2 Responses

####  5.2.1 HTTP Details

The format for all responses is JSON, and the sections below describe the structure to be returned in more detail. The primary response is when the Manifest is requested and, for optimization reasons, this must return the Manifest with the default Sequence, Canvases and Associations for Image Content resources embedded within it. Additional Sequences and Associations may be made available via additional calls.

The content-type of the response _must_{: .rfc} be either `application/json` (regular JSON), or `application/ld+json` (JSON-LD). If the client explicitly wants the JSON-LD content-type, then it _must_{: .rfc} specify this in an Accept header, otherwise the server _must_{: .rfc} return the regular JSON content-type.

If the regular JSON content-type is returned, then it is _recommended_{: .rfc} that the server provide a link header to the context document. The syntax for the link header is below, and further [described in section 6.8 of the JSON-LD specification][38]. The context _must not_{: .rfc} be given in the link header if the client requests `application/ld+json`.

```
Content-Type: application/json
Link: <http://iiif.io/api/presentation/{{ site.presentation_api.latest.major }}/context.json>
            ;rel="http://www.w3.org/ns/json-ld#context"
            ;type="application/ld+json"
```
{: .urltemplate}

The HTTP server _should_{: .rfc}, if at all possible, send the Cross Origin Access control header (often called "CORS") to allow clients to download the manifests via AJAX from remote sites. The header name is `Access-Control-Allow-Origin` and the value of the header _should_{: .rfc} be `*`.

```
Access-Control-Allow-Origin: *
```
{: .urltemplate}

In the Apache web server this may be enabled with the following configuration snippet:

```
LoadModule headers_module modules/mod_headers.so  
Header set Access-Control-Allow-Origin "*"
```
{: .urltemplate}

Responses _should_{: .rfc} be compressed by the server as there are significant performance gains to be made for very repetitive data structures.

####  5.2.2 Response Content Details

The following applies to all of the responses from the server in the Presentation API.  For the most part, these are features of the JSON-LD specification that have particular uses within the API.

Resource descriptions _should_{: .rfc} be embedded within higher-level resources, and _may_{: .rfc} also be available via separate requests from URIs linked in the responses. These URIs are in the `@id` property for the resource. Links to resources may be either given as just the URI if there is no additional information associated with them, or they may be a JSON object with the `@id` property. Thus the following two lines are equivalent, however the second should not be used without additional information associated with the resource:

``` javascript
// Option 1, plain string
{"seeAlso" : "http://www.example.org/descriptions/book1.xml"}
// Option 2, object with @id property
{"seeAlso" : {"@id":"http://www.example.org/descriptions/book1.xml"}}
```

Each response _must_{: .rfc} have a single `@context` property, and it _should_{: .rfc} appear as the very first key/value pair in the top-most object. This tells Linked Data processors how to interpret the information. It _must_{: .rfc} occur exactly once per response, and be omitted from any embedded resources. For example, when embedding a Sequence within a Manifest, the Sequence _must not_{: .rfc} have the @context field.

``` json
{"@context": "http://iiif.io/api/presentation/{{ site.presentation_api.latest.major }}/context.json"}
```

Any additional fields beyond those defined in this specification _should_{: .rfc} be mapped to RDF predicates using a context document. In this case, the value of `@context` is an array with the last element being the IIIF context document, and the extension context documents coming before it. Extension contexts _must not_{: .rfc} change the semantics of any of the fields defined in the IIIF context. The `@context` line would thus look like:

``` json
{"@context": ["http://www.example.org/iiif/contexts/extension1.json", "http://iiif.io/api/presentation/{{ site.presentation_api.latest.major }}/context.json"]}
```

Any of the fields _may_{: .rfc} be repeated. This is done by giving a list of values, rather than a single string.

``` json
{"seeAlso" : ["http://www.example.org/descriptions/book1.xml", "http://www.example.org/descriptions/book1.csv"]}
```

Language _may_{: .rfc} be associated with descriptive metadata strings using the following pattern of value plus the [RFC 5646][28] code, instead of a plain string.  For example a description might have a language associated with it:

``` json
{"description" : {"@value":"Here is a longer description of the object", "@language":"en"} }
```

Note that [RFC 5646][28] allows the script of the text to be included after a hyphen, such as `ar-latn`, and clients _should_{: .rfc} be aware of this possibility. This allows for full internationalization of the user interface components described in the response, as the labels as well as values may be translated in this manner; examples are given below.

Minimal HTML markup _may_{: .rfc} be included in descriptive strings using the pattern of `@value` with an `@type` of `rdf:XMLLiteral`. This is included to allow manifest creators to add links and simple formatting instructions to blocks of plain text. The content _must_{: .rfc} be well-formed XML and therefore must be wrapped in an element such as `p` or `span`.

In order to avoid HTML or script injection attacks, clients _must_{: .rfc} remove:

  * Tags such as `script`, `style`, `object`, `form`, `input`
  * All attributes other than `href` on the `a` tag, `src` and `alt` on the `img` tag
  * CData sections
  * XML Comments 
  * Processing instructions

Clients _should_{: .rfc} allow only `a`, `b`, `br`, `i`, `img`, `p`, and `span` tags. Clients _may_{: .rfc} choose to remove any and all tags, therefore it _should not_{: .rfc} be assumed that the formating will always be rendered.

```json
{
  "description": {
    "@value":"<p>Some <b>description</b></p>", 
    "@type": "rdf:XMLLiteral",
    "@language" : "en"
  }
} 
```

Clients _should_{: .rfc} be aware that some implementations may add an `@graph` property at the top level, which contains the object. This is a side effect of JSON-LD serialization, and servers _should_{: .rfc} remove it before sending to the client. The client can use the JSON-LD compaction algorithm to remove it, if present. Using JSON-LD Framing with the [supplied Frames][29] will avoid the generation of the `@graph` pattern.

##  6. Primary Resource Types

###  6.1. Manifest

Recommended URI pattern:

```
{scheme}://{host}/{prefix}/{identifier}/manifest.json
```
{: .urltemplate}

The Manifest contains sufficient information for the client to initialize itself and begin to display something quickly to the user. It represents a single object and any intellectual work or works embodied within that object. In particular it includes the descriptive, rights and linking information for the object. It then embeds the Sequence(s) of Canvases that should be rendered to the user.

The fields are included directly within the JSON object. The identifier in `@id` _must_{: .rfc} always be able to be dereferenced to retrieve the JSON description of the object. After the descriptive information, there is then a `sequences` section, which is a list of objects. Each object is a Sequence, described in the next section, that represents the order of the views and the first such Sequence should be included within the Manifest as well as optionally being available from its own URI. Subsequent Sequences _should_{: .rfc} only be referenced with their identifier (`@id`) and class (`@type`) and thus _must_{: .rfc} be dereferenced by clients in order to process them if the user selects to view that Sequence.

The example below includes only the Manifest-level information, however it _must_{: .rfc} embed the Sequence, Canvas and content information as described in the following sections. It includes examples in the descriptive metadata for how to associate multiple entries with a single field and how to be explicit about the language of a particular entry.

```javascript
{
  // Metadata about this Manifest file
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/manifest.json",
  "@type":"sc:Manifest",

  // Descriptive metadata about the physical object/intellectual work
  "label": "Book 1",
  "metadata": [
    {"label":"Author", "value":"Anne Author"},
    {"label":"Published", "value": [
        {"@value": "Paris, circa 1400", "@language":"en"},
        {"@value": "Paris, environ 1400", "@language":"fr"}
      ]
    },
    {"label":"Source", "value": 
      {
        "@value" : "<span>From: <a href=\"http://example.org/db/1.html\">Some Collection</a></span>",
        "@type" :  "rdf:XMLLiteral",
        "@language" : "en"
      }
    }
  ],
  "description":"A longer description of this example book. It should give some real information.",
  "thumbnail": {
    "@id": "http://www.example.org/images/book1-page1/full/80,100/0/native.jpg",
    "service": {
      "@id":"http://www.example.org/images/book1-page1",
      "profile":"http://library.stanford.edu/iiif/image-api/1.1/conformance.html#level1",
    }
  },

  // Presentation Information
  "viewingDirection": "right-to-left",
  "viewingHint": "paged",

  // Rights Information
  "license":"http://www.example.org/license.html",
  "attribution":"Provided by Example Organization",
  "logo": "http://www.example.org/logos/institution1.jpg",

  // Links
  "related":{
    "@id": "http://www.example.org/videos/video-book1.mpg",
    "format": "video/mpeg"
  },
  "service":"http://www.example.org/iiif/book1/search.html",
  "seeAlso":"http://www.example.org/library/catalog/book1.xml",
  "within":"http://www.example.org/collections/books/",

  // List of Sequences  
  "sequences" : [
      {
        "@id":"http://www.example.org/iiif/book1/sequence/normal.json",
        "@type":"sc:Sequence",
        "label":"Current Page Order"
        // Sequence's page order should be included here, see below...
      }
      // Any additional sequences can be referenced here...
  ]
}
```


###  6.2. Sequence

Recommended URI pattern:

```
{scheme}://{host}/{prefix}/{identifier}/sequence/{name}.json
```
{: .urltemplate}

The Sequence conveys the ordering of the views of the object. The default sequence (and typically the only sequence) _must_{: .rfc} be embedded within the Manifest, and _may_{: .rfc} also be available from its own URI. Any additional sequences _must_{: .rfc} be referred to from the Manifest, not embedded within it.

The new {name} parameter in the URI structure is to distinguish it from any other sequences that may be available for the physical object. Typical default names for sequences are "normal" or "basic". Names _should_{: .rfc} begin with a character in the range [a-zA-Z].

Sequences _may_{: .rfc} have their own descriptive, rights and linking metadata using the same fields as for Manifests. The `label` property _may_{: .rfc} be given for sequences and _must_{: .rfc} be given if there is more than one referenced from a Manifest. After the metadata, the set of pages in the object, represented by Canvas resources, are listed in order in the `canvases` property.  There _must_{: .rfc} be at least one Canvas given.

In the Manifest example above, the sequence is referenced by its URI and contains only the basic information of label, `@type` and `@id`. The default sequence should be written out in full within the Manifest file, as below but _must not_{: .rfc} have the `@context` property.

```javascript
{
  // Metadata about this Sequence
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/sequence/normal.json",
  "@type":"sc:Sequence",
  "label":"Current Page Order",

  "viewingDirection":"left-to-right",
  "viewingHint":"paged",

  // The order of the Canvases
  "canvases": [
    {
      "@id":"http://www.example.org/iiif/book1/canvas/p1.json",
      "@type":"sc:Canvas",
      "label":"p. 1"
      // ...
      ]
    },
    {
      "@id":"http://www.example.org/iiif/book1/canvas/p2.json",
      "@type":"sc:Canvas",
      "label":"p. 2"
      // ...
    },
    {
      "@id":"http://www.example.org/iiif/book1/canvas/p3.json",
      "@type":"sc:Canvas",
      "label":"p. 3"
      // ...
    }
  ]
}
```

###  6.3. Canvas

Recommended URI pattern:

```
{scheme}://{host}/{prefix}/{identifier}/canvas/{name}.json
```
{: .urltemplate}

The Canvas represents an individual page or view and acts as a central point for laying out the different content resources that make up the display. The {name} parameter must uniquely distinguish the canvas from all other Canvases in the object. As with Sequences, the name _should not_{: .rfc} begin with a number. Suggested patterns are "f1r" or "p1".

Every Canvas _must_{: .rfc} have a `label` to display, and a `height` and a `width` as integers. A Canvas is a two-dimensional rectangular space with an aspect ratio that represents a single logical view of some part of the object, and the aspect ratio is given with the height and width properties. This allows resources to be associated with specific parts of the Canvas, rather than the entire space. It is _recommended_{: .rfc} that if there is (at the time of implementation) a single image that depicts the page, then the dimensions of the image are used as the dimensions of the Canvas for simplicity. If there are multiple full images, then the dimensions of the largest image should be used. If the largest image's dimensions are less than 1200 pixels on either edge, then the Canvas's dimensions _should_{: .rfc} be double that of the image. Clients _must_{: .rfc} be aware that this is not always the case, such as in the examples presented, and instead _must_{: .rfc} always scale images into the space represented by the Canvas.

Image resources, and only image resources, are included in the `images` section of the Canvas. These are linked to the Canvas via Annotations. Other content, such as transcriptions, video, audio or commentary, is provided via external Annotation Lists referenced in the `otherContent` section. The value of both of these _must_{: .rfc} be a list, even if there is only one entry. Both are optional, in the situation that there is no additional information associated with the Canvas. Note that the items in the `otherContent` list may be either objects with an "@id" property or strings. In the case of a string, this is the URI of the annotation list and the type of "sc:AnnotationList" can be inferred.

In a "paged" sequence, presented in a book viewing modality, the first Canvas is defined as a single up -- the cover, or first recto page. Thereafter, the Canvases represent the sides of the leaves, and hence may be presented two up as an opening of the book.  If there are Canvases which are in the Sequence but would break this ordering, then they _must_{: .rfc} have the `viewingHint` property with a value of "non-paged".  Similarly if the first Canvas is not a single up, it _must_{: .rfc} be marked as "non-paged" or an empty Canvas added before it.

Canvases _may_{: .rfc} be dereferenced separately from the Manifest via their URIs, and the following representation information should be returned. This information should be embedded within the Sequence file, as per previously.

```javascript
{
  // Metadata about this Canvas
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/canvas/p1.json",
  "@type":"sc:Canvas",
  "label":"p. 1",
  "height":1000,
  "width":750,

  "service" : [ 
    {
      "@context" : "...",
      "@id" : "http://.../go-here-to-get-my-physicalunits.json",
      "profile" : "physical-dims-profile",
      "physicalUnits" : "mm",
      "physicalScale" : 0.0126385,
    },
    {
      "@context" : "...",
      "@id" : "http://.../go-here-to-get-my-geo.json",
      "profile" : "",
    }
  ],

  "images": [
    {
      "@type":"oa:Annotation"
      // Link from Image to Canvas should be included here, as below
    }
  ],
  "otherContent": [
    {
      // Reference to list of other Content resources, _not included directly_
      "@id":"http://www.example.org/iiif/book1/list/p1.json",
      "@type":"sc:AnnotationList"
    }
  ]

}
```

###  6.4. Association of Image Resources

Recommended URI pattern:

```
{scheme}://{host}/{prefix}/{identifier}/annotation/{name}.json
```
{: .urltemplate}

Association of images with their respective Canvases is done via Annotations. Although normally Annotations are used for associating commentary with the thing the annotation's text is about, the Open Annotation model allows any resource to be associated with any other resource, or parts thereof, and it is reused for both commentary and painting resources on the Canvas.

Annotations _may_{: .rfc} have their own URIs, conveyed by adding an `@id` property to the JSON object. The content of the Annotation should be returned if the URI is requested. Annotations are _not required_{: .rfc} in this specification to be dereferenced separately from their Annotation Lists, Sequences and Manifests, but some systems may like to do this and identifiers should be given using the recommended pattern if possible.

Each association of a Content Resource _must_{: .rfc} have the `motivation` field and the value _must_{: .rfc} be "sc:painting". This is in order to distinguish it from comment annotations about the Canvas, described in further detail in [Section 5.6.6].  All resources which are to be displayed as part of the representation are given the motivation of "sc:painting", regardless of whether they are images or not.  For example, a transcription of the text in a page is considered "painting" as it is a representation of the object, whereas a comment about the page is not.

The image itself is linked in the `resource` property of the Annotation. It _must_{: .rfc} have an `@id` field, with the value being the URI at which the image can be obtained. It _should_{: .rfc} have an `@type` of "dcterms:Image". Its media type _may_{: .rfc} be listed in `format`, and its height and width _may_{: .rfc} be given as integer values for `height` and `width` respectively.

If the [IIIF Image API][26] is available for the image, then a link to the service's endpoint _should_{: .rfc} be included. The endpoint is the URI up to the identifier, but not including the trailing slash character or any of the subsequent parameters. The profile of the service should be the supported conformance level, and the additional fields from the [Image API info document][31] _may_{: .rfc} be included in this JSON object to avoid requiring it to be downloaded separately.

Although it seems redundant, the URI of the canvas _must_{: .rfc} be repeated in the `on` field of the Annotation. This is to ensure consistency with annotations that target only part of the resource, described in more detail below.

Additional features of the Open Annotation data model _may_{: .rfc} also be used, such as selecting a segment of the Canvas or content resource, or embedding the comment or transcription within the Annotation. These additional features are described below.

```javascript
{
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/annotation/p0001-image.json",
  "@type":"oa:Annotation",
  "motivation":"sc:painting",
  "resource": {
    "@id":"http://www.example.org/iiif/book1/res/page1.jpg",
    "@type":"dctypes:Image",
    "format":"image/jpeg",
    "service": {
      "@id":"http://www.example.org/images/book1-page1",
      "profile":"http://iiif.io/api/image/1.2/profiles/level2.json",
    },
    "height":2000,
    "width":1500
  },
  "on":"http://www.example.org/iiif/book1/canvas/p1.json"
}
```

###  6.5. Other Content Resources

Recommended URI pattern:

```
{scheme}://{host}/{prefix}/{identifier}/list/{name}.json
```
{: .urltemplate}

For some objects, there may be more than a single image available to represent the page. Other resources could include the full text of the object, musical notations, musical performances, diagram transcriptions, higher resolution segments of part of the page, commentary annotations, tags, video, data and more. These additional resources are included in Annotation Lists, referenced from the Canvas.

The {name} parameter in the URI pattern _must_{: .rfc} uniquely distinguish it from all other lists, and is typically the same name as the Canvas. As a single Canvas may have multiple lists of additional resources, perhaps divided by type, this _must not_{: .rfc} be assumed however, and the URIs must be followed rather than constructed _a priori_. As with other uses of the {name} parameter, it _should not_{: .rfc} begin with a number.

The Annotation List _must_{: .rfc} have an http[s] URI given in `@id`, and the the JSON representation _must_{: .rfc} be returned when that URI is dereferenced.  They _may_{: .rfc} have any of the other fields defined in this specification.

The list of resource associations are given, after any metadata, in a `resources` list. The items in the list are Annotations, as described above, however the resource linked by the annotation is something other than an image. The Canvas URI _must_{: .rfc} be repeated in the `on` field, as above.

Please note the different types and formats for the Content resources. The format _should_{: .rfc} be included and _must_{: .rfc} be the media type that is returned when the resource is dereferenced. For resources that are displayed as part of the facsimile (such as images, text transcriptions, performances of music from the manuscript and so forth) the motivation _must_{: .rfc} be "sc:painting". The type of the Content resource _should_{: .rfc} be taken from this [list in the Open Annotation specification][32], or a similar well-known resource type ontology.  The Content Resources _may_{: .rfc} also have any of the other fields defined in this specification, including commonly `label`, `description`, `metadata`, `license` and `attribution`.

Note well that Annotation Lists _must not_{: .rfc} be embedded within the Manifest.

```javascript
{
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/list/p1.json",
  "@type":"sc:AnnotationList",

  "resources": [
    {
      "@type":"oa:Annotation",
      "motivation":"sc:painting",
      "resource":{
        "@id":"http://www.example.org/iiif/book1/res/music.mp3",
        "@type":"dctypes:Sound",
        "format":"audio/mpeg"
      }
      "on":"http://www.example.org/iiif/book1/canvas/p1.json"
    },
    {
      "@type":"oa:Annotation",
      "motivation":"sc:painting",
      "resource":{
        "@id":"http://www.example.org/iiif/book1/res/tei-text-p1.xml",
        "@type":"dctypes:Text",
        "format":"text/xml"
      }
      "on":"http://www.example.org/iiif/book1/canvas/p1.json"
    },
    // ... and so on
  ]
}
```

###  6.6. Advanced Association Features

The following sections describe known use cases for building representations of objects using the IIIF Presentation API, and clients _should_{: .rfc} expect to encounter them. Other use cases are likely to exist, and _must_{: .rfc} be encoded using the Open Annotation's context document mapping for any additional fields required.

####  6.6.1. Segments

It is important to be able to extract parts, or segments, of resources. In particular a very common requirement is to associate a resource with part of a Canvas, or part of an image with either the entire Canvas or part thereof. Secondly, as transcriptions are often made available in XML files, extracting the correct page to associate with the Canvas, or line to associate with part of the Canvas, is equally useful for reusing existing material. These can be accomplished using URI Fragments for simple cases. Two examples are given below:

  * Segments of both Images and Canvases may be selected by adding a [rectangular bounding box ][33]after the URI. The fragment _must_{: .rfc} be structured:

      `http://www.example.com/iiif/book1/canvas/p1.json#xywh=100,100,300,50`

      Where the four numbers are the x and y coordinates in the image or canvas, followed by the width and height. Thus this segment is 300px wide, 50px high and starts at position 100,100. Note that only integers are allowed in this syntax, and this may limit accuracy of assignment to Canvases with small dimensions.

    ```javascript
    {
      "@context":"http://iiif.io/api/presentation/2/context.json",
      "@id":"http://www.example.org/iiif/book1/annotation/anno1".json,
      "@type":"oa:Annotation",
      "motivation":"sc:painting",
      "resource":{
        // Crop out scanning bed
        "@id":"http://www.example.org/iiif/book1/res/page1.jpg#xywh=40,50,1200,1800",
        "@type":"dctypes:Image",
        "format":"image/jpeg"
      }
      // Canvas size is 1200x1800
      "on":"http://www.example.org/iiif/book1/canvas/p1.json"
    }
    ```

  * Segments of XML files may be extracted with [XPaths][34]. The fragment _must_{: .rfc} be structured:
        `http://www.example.com/iiif/book1/res/tei.xml#xpointer(/path/to/element)`

    ```javascript
    {
      "@context":"http://iiif.io/api/presentation/2/context.json",
      "@id":"http://www.example.org/iiif/book1/annotation/anno1".json,
      "@type":"oa:Annotation",
      "motivation":"sc:painting",
      "resource":{
        "@id":"http://www.example.org/iiif/book1/res/tei.xml#xpointer(//line[1])"
        "@type":"dctypes:Text",
        "format":"text/xml"
      }
      "on":"http://www.example.org/iiif/book1/canvas/p1.json#xywh=100,100,500,300"
    }
    ```

####  6.6.2. Embedded Content

Instead of referencing transcription text externally, it is often easier to record it in the Annotation itself. Equally, text based comments could also benefit from being included in the Annotation that associates the comment with the Canvas.

Content _may_{: .rfc} be embedded instead of referenced by using the following pattern within the Annotation block:

```javascript
"resource" : { "@type" : "cnt:ContextAsText", "chars" : "text here" }
```

If it is desirable to associate the language with the content, then it _must_{: .rfc} be `language` not `@language` (otherwise the `chars` field would need to be an array with `@value`). The media type _may_{: .rfc} be given using a `format` field.

An example of this feature:

```javascript
{
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/annotation/p1.json",
  "@type":"oa:Annotation",
  "motivation":"sc:painting",
  "resource":{
    "@type":"cnt:ContentAsText",
    "chars":"Here starts book one...",
    "format":"text/plain",
    "language":"en"
  }
  "on":"http://www.example.org/iiif/book1/canvas/p1.json#xywh=100,150,500,25"
}
```

####  6.6.3. Choice of Alternative Resources

A common requirement is to have a choice between multiple images that depict the page, such as different under different lights, or taken at different times. This can be accomplished by having a "oa:Choice" object as the resource, which then refers to the options to select from. It _must_{: .rfc} have one `default` and at least one further `item` to choose from. The images _should_{: .rfc} have a `label` for the viewer to display to the user so they can make their selection from among the options.

The same construction can be applied to a choice between other types of resources as well. This is described in the [Multiplicity section][35] of the Open Annotation specification.

Either the `default` or `item` _may_{: .rfc} have a value of "rdf:nil". This means that a valid option is not to display anything. This _must not_{: .rfc} have a label associated with it, viewers should either use "Nothing" or an appropriate label of their choice.

This can be used to model foldouts and other dynamic features of a page, by associating images of the different states with the Canvas. Depending on the nature of the images, this can be either done such that the entire image is switched to change state, or only the section of the image that has to change if the segment information is known.

```javascript
{
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/annotation/anno1.json",
  "@type":"oa:Annotation",
  "motivation":"sc:painting",
  "resource":{
    "@type":"oa:Choice",
    "default":{
      "@id":"http://www.example.org/iiif/book1/res/page1.jpg",
      "@type":"dctypes:Image",
      "label":"Color"
    },
    "item": [
      {
        "@id":"http://www.example.org/iiif/book1/res/page1-blackandwhite.jpg",
        "@type":"dctypes:Image",
        "label":"Black and White"
      }
    ]
  }
  "on":"http://www.example.org/iiif/book1/canvas/p1.json"
}
```

####  6.6.4. Non Rectangular Segments

The Scalable Vector Graphics standard (SVG) is used to describe non-rectangular areas of Canvas or Image resources. While SVG can, of course, describe rectangles this is _not recommended_{: .rfc}, and the xywh bounding box described above _should_{: .rfc} be used instead.

In this pattern, the resource of the annotation is a "oa:SpecificResource" which has the complete image referenced in a `full` field and the SVG embedded in a `selector` field (as the SVG selects the part of the image needed). The SVG document is embedded using the same ContentAsText approach as for embedding comments or transcriptions.

If the section of an image is mapped to part of a Canvas, as in the example below, then the target in `on` _must_{: .rfc} be the rectangular bounding box in which the SVG viewport should be placed. If the entire canvas is the target, then the SVG viewport is assumed to cover the entire Canvas. If the dimensions of the viewport and the bounding box or Canvas are not the same, then the SVG _must_{: .rfc} be scaled such that it covers the region. This may result in different scaling ratios for the X and Y dimensions.

```javascript
{
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/annotation/anno1.json",
  "@type":"oa:Annotation",
  "motivation":"sc:painting",
  "resource":{
    "@type":"oa:SpecificResource",
    "full": {
      "@id":"http://www.example.org/iiif/book1/res/page1.jpg",
      "@type":"dctypes:Image"
    },
    "selector": {
      "@type":["oa:SvgSelector","cnt:ContentAsText"],
      "chars":"<svg xmlns="..."><path d="..."/></svg>"
    }
  }
  "on":"http://www.example.org/iiif/book1/canvas/p1.json#xywh=100,100,300,300"
}
```

####  6.6.5. Style

The Cascading Style Sheets standard (CSS) is used to describe how the client should render a given resource to the user. The CSS information is embedded within the Annotation using the same ContentAsText approach above. As a stylesheet may contain more than one style, and be reused between annotations, it is attached to the annotation directly in the same manner as a stylesheet being linked to an HTML document. Then the name of the style class is attached to the resource that should be styled, again in the same manner as the class attribute in html, although we use `style` to avoid confusion with object classes.

In the example below, the text should be colored red.

```javascript
{
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/annotation/anno1.json",
  "@type":"oa:Annotation",
  "motivation":"sc:painting",
  "stylesheet":{
    "@type": ["oa:CssStyle", "cnt:ContextAsText"],
    "chars": ".red {color: red;}"
  },
  "resource":{
    "@type":"oa:SpecificResource",
    "style":"red",
    "full": {
      "@type":"cnt:ContentAsText",
      "chars":"Rubrics are Red, ..."
    }
  }
  "on":"http://www.example.org/iiif/book1/canvas/p1.json#xywh=100,150,500,30"
}
```

CSS may also be used for rotation of images which are not correctly aligned with the Canvas. In the example below, after the image is located within the 500 wide by 30 high space within the Canvas, it is then rotated by the rendering client application around the top left corner by 45 degrees anti-clockwise.

```javascript
{
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/annotation/anno1.json",
  "@type":"oa:Annotation",
  "motivation":"sc:painting",
  "stylesheet":{
    "@type": ["oa:CssStyle", "cnt:ContextAsText"],
    "chars": ".rotated {transform-origin: top left; transform: rotate(-45deg);}"
  },
  "resource":{
    "@type":"oa:SpecificResource",
    "style":"rotated",
    "full": {
      "@id":"http://www.example.org/iiif/book1/res/page1-detail.jpg",
      "@type":"dctypes:Image",
    }
  }
  "on":"http://www.example.org/iiif/book1/canvas/p1.json#xywh=100,150,500,30"
}
```

###  6.6.6. Comment Annotations

For annotations which are comments about the Canvas, as opposed to painting content resources onto the Canvas, there are different types of motivation to make the distinction clear. For Annotations about the content (such as comments, notes, descriptions etc.) the `motivation` _should_{: .rfc} be "oa:commenting", but _may_{: .rfc} be any from the list given in the Open Annotation specification.

```javascript
{
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/annotation/anno1.json",
  "@type":"oa:Annotation",
  "motivation":"oa:commenting",
  "resource":{
    "@id":"http://www.example.org/iiif/book1/res/comment1.html",
    "@type":"dctypes:Text",
    "format":"text/html"
  }
  "on":"http://www.example.org/iiif/book1/canvas/p1.json"
}
```

##  7. Additional Resource Types

There are cases where additional information is needed to fully represent an institution's set of works and their components.

First, additional section information may be available as to which Canvases, or parts thereof, should be grouped together in some way. This could be for textual reasons, such as to distinguish books, chapters, verses, sections, non-content-bearing pages, the table of contents or similar. Equally, physical features might be important such as quires or gatherings, sections that have been added later and so forth. These cases are solved with Ranges.

Secondly, as the information is primarily divided by Canvas (and thus page), there may be higher level groupings of annotations that need to be recorded. For example, all of the English translation annotations of a medieval French document could be kept separate from the direct transcription, or an edition into modern French. These cases are solved by assigning an AnnotationList to be within a Layer.

Thirdly, the specification otherwise assumes that a Manifest is the highest level of description.  In order to allow easy advertising and discovery of the Manifests, we introduce a Collection which can aggregate sub-Collections and/or Manifests.  If the recommended URI pattern is used, this provides a client system a means to locate all of the Manifests provided by an institution.

<img src="/img/metadata-api/iiif-objects-all.png" width="550px"/>

_Figure 3. All Resource Types_

###  7.1. Ranges

Recommended URI pattern:

```
{scheme}://{host}/{prefix}/{identifier}/range/{name}.json
```
{: .urltemplate}

It may be important to describe additional structure within the text, such as newspaper articles that span pages, the range of non-content-bearing pages at the beginning of a work, or chapters within a book. These are described using Ranges in a similar manner to Sequences. The intent of adding a Range is to allow the client to display a structured hierarchy to enable the user to navigate within the object without merely stepping through the current sequence.

A range includes one or more Canvases or, different to Sequences, parts of Canvases. The part must be rectangular, and is given using the `xywh=` fragment approach. This allows for selecting, for example, the areas within two newspaper pages where an article is located. As the information about the Canvas is already in the Sequence, it _should_{: .rfc} not be repeated. In order to present a table of the different ranges to allow a user to select one, every Range _must_{: .rfc} have a label. It _may_{: .rfc} also have any of the other fields, including especially `within` to point to another Range of which the current one is part. For example, a subsection Range could point to the section Range that it is part of using `within`.

Ranges are linked or embedded within the Manifest in a `structures` field, and have the same properties as Sequences:

```javascript
{
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/manifest.json",
  "@type":"sc:Manifest",
  // Metadata ...

  "sequences": [
      // Sequence etc. ...  
  ],

  "structures": [
    {
        "@id":"http://www.example.org/iiif/book1/range/r1.json",
        "@type":"sc:Range",
        "label":"Introduction",
        "canvases": [
          "http://www.example.org/iiif/book1/canvas/p1.json",
          "http://www.example.org/iiif/book1/canvas/p2.json",
          "http://www.example.org/iiif/book1/canvas/p3.json#xywh=0,0,750,300"
        ]
    },
    {
        "@id":"http://www.example.org/iiif/book1/range/r1-1.json",
        "@type":"sc:Range",
        "label":"Objectives and Scope",
        "within":"http://www.example.org/iiif/book1/range/r1.json",
        "canvases": ["http://www.example.org/iiif/book1/canvas/p2.json#xywh=0,0,500,500"]
    }
    // And any additional ranges here
  ]
}
```

###  7.2. Layers

Recommended URI pattern:

```
{scheme}://{host}/{prefix}/{identifier}/layer/{name}.json
```
{: .urltemplate}

There may be groupings of annotations, such as all of the annotations that, regardless of which Canvas they target, represent a particular transcription or translation of the text in the object. In order to allow clients to maintain a coherent interface, the lists of these annotations are grouped together in Layers. Without the Layer construction, it would be impossible to determine which annotations belonged together. The client may then present a user interface that allows all of the annotations in a layer to be displayed or hidden according to the user's preference.

Each Annotation List _may_{: .rfc} be part of one or more Layers, and this is recorded using the `within` relationship in both the Manifest and Annotation List responses. The Layer _must_{: .rfc} have a Label so that it can be presented to a user to select whether or not to view it. Note that the `within` field _should_{: .rfc} be present in both the Annotation List resource and in the Manifest.  

```javascript
{
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@id":"http://www.example.org/iiif/book1/list/l1.json"
  "@type":"sc:AnnotationList",
  "within": {
    "@id": "http://www.example.org/iiif/book1/layer/transcription.json",
    "@type": "sc:Layer",
    "label": "Diplomatic Transcription"
  }
}
```

###  7.3. Collections

Recommended URI pattern:

```
{scheme}://{host}/{prefix}/collection.json
{scheme}://{host}/{prefix}/collection/{name}.json
```
{: .urltemplate}

Collections are used to list the manifests available for viewing, and to describe the collections that the physical objects are part of.  The collections _may_{: .rfc} include both other collections and manifests, in order to form a hierarchy of objects with manifests at the leaf nodes of the tree.  Collection objects _should not_{: .rfc} be embedded inline within other collection objects, but instead have their own URI from which the description is made available.

Manifests or collections _may_{: .rfc} appear within more than one collection. For example, an institution might define four collections: one for modern works, one for historical works, one for newspapers and one for books.  The manifest for a modern newspaper would then appear in both the modern collection and the newspaper collection.  Alternatively, the institution may choose to have two separate newspaper collections, and reference each as a sub-collection of modern and historical.

The intended usage of collections is to allow clients to:

  * Load a pre-defined set of manifests at initialization time
  * Receive a set of manifests, such as search results, for rendering
  * Visualize lists or hierarchies of related manifests
  * Provide navigation through a list or hierarchy of available manifests

Note that the recommended URI pattern prevents the existence of a Manifest with the identifier "collection".

Collections have two new list-based properties:

collections
: References to sub-collections of the current collection.  Each referenced collection MUST have the appropriate @id, @type and label.

manifests
: References to manifests contained within the current collection. Each referenced manifest MUST have the appropriate @id, @type and label.

Collections MUST have the following properties:

  * @id
  * @type and the value MUST be "sc:Collection"
  * label

Collections SHOULD have the following properties:

  * At least one of collections and manifests.  Empty collections with neither are allowed but discouraged.
  * description
  * attribution

Collections MAY have the following properties:

  * metadata
  * thumbnail
  * logo
  * license
  * viewingHint, however no values are defined in this specification that are valid for Collections
  * related
  * service
  * seeAlso
  * within

An example collection document:

```javascript
{
  "@context": "http://iiif.io/api/presentation/2/context.json",
  "@id": "http://example.org/iiif/collection.json",
  "@type": "sc:Collection",
  "label": "Top Level Collection for Example Organization",
  "description": "Description of Collection",
  "attribution": "Provided by Example Organization",

  "collections": [
    { "@id": "http://example.org/iiif/collection/part1.json",
      "@type": "sc:Collection",
      "label": "Sub Collection 1"
     },
     { "@id": "http://example.org/iiif/collection/part2.json",
       "@type": "sc:Collection",
       "label": "Sub Collection 2"
      }
  ],
  "manifests": [
    { "@id": "http://example.org/iiif/book1/manifest.json",
      "@type": "sc:Manifest",
      "label" : "Book 1"
    }
  ]
}
```


##  8. Complete Example Response

Note that 7.3 above contains a complete response for a Collection document.

URL: _http://www.example.org/iiif/book1/manifest.json_

```javascript
{
  "@context":"http://iiif.io/api/presentation/2/context.json",
  "@type":"sc:Manifest",
  "@id":"http://www.example.org/iiif/book1/manifest.json",

  "label":"Book 1",
  "metadata": [
    {"label":"Author", "value":"Anne Author"},
    {"label":"Published", "value": [
        {"@value": "Paris, circa 1400", "@language":"en"},
        {"@value": "Paris, environ 14eme siecle", "@language":"fr"}
        ]
    }
  ],
  "description":"A longer description of this example book. It should give some real information.",
  "license":"http://www.example.org/license.html",
  "attribution":"Provided by Example Organization",
  "service":"http://www.example.org/iiif/book1/search.html",
  "seeAlso":
    {
      "@id": "http://www.example.org/library/catalog/book1.marc",
      "format": "application/marc"
    },
  "within":"http://www.example.org/collections/books/",

  "sequences" : [
      {
        "@id":"http://www.example.org/iiif/book1/sequence/normal.json",
        "@type":"sc:Sequence",
        "label":"Current Page Order",
    "viewingDirection":"left-to-right",
        "viewingHint":"paged",
        "canvases": [
          {
            "@id":"http://www.example.org/iiif/book1/canvas/p1.json",
            "@type":"sc:Canvas",
            "label":"p. 1",
            "height":1000,
            "width":750,
            "images": [
              {
                "@type":"oa:Annotation",
                "motivation":"sc:painting",
                "resource":{
                    "@id":"http://www.example.org/iiif/book1/res/page1.jpg",
                    "@type":"dctypes:Image",
                    "format":"image/jpeg",
                    "service": {
                        "@id": "http://www.example.org/images/book1-page1",
                        "profile":"http://library.stanford.edu/iiif/image-api/compliance.html#level0"
                    },
                    "height":2000,
                    "width":1500
                },
                "on":"http://www.example.org/iiif/book1/canvas/p1.json"
              }
            ],
            "otherContent": [
              {
                "@id":"http://www.example.org/iiif/book1/list/p1.json",
                "@type":"sc:AnnotationList"
              }
            ]
        },
          {
            "@id":"http://www.example.org/iiif/book1/canvas/p2.json",
            "@type":"sc:Canvas",
            "label":"p. 2",
            "height":1000,
            "width":750,
            "images": [
              {
                "@type":"oa:Annotation",
                "motivation":"sc:painting",
                "resource":{
                    "@id":"http://www.example.org/images/book1-page2/full/1500,2000/0/native.jpg",
                    "@type":"dctypes:Image",
                    "format":"image/jpeg",
                    "height":2000,
                    "width":1500,
                    "service": {
                        "@id":"http://www.example.org/images/book1-page2",
                        "profile":"http://library.stanford.edu/iiif/image-api/compliance.html#level0",
                        "scale_factors": [1, 2, 4],
                        "height":8000,
                        "width":6000,
                        "tile_width":1024,
                        "tile_height":1024
                    }
                },
                "on":"http://www.example.org/iiif/book1/canvas/p2.json"
              }
            ],
            "otherContent": [
              {
                "@id":"http://www.example.org/iiif/book1/list/p2.json",
                "@type":"sc:AnnotationList"
              }
            ]
          },
          {
            "@id":"http://www.example.org/iiif/book1/canvas/p3.json",
            "@type":"sc:Canvas",
            "label":"p. 3",
            "height":1000,
            "width":750,
            "images": [
              {
                "@type":"oa:Annotation",
                "motivation":"sc:painting",
                "resource":{
                    "@id":"http://www.example.org/iiif/book1/res/page3.jpg",
                    "@type":"dctypes:Image",
                    "format":"image/jpeg",
                    "service": {
                        "@id":"http://www.example.org/images/book1-page3",
                        "profile":"http://library.stanford.edu/iiif/image-api/compliance.html#level0"
          },
                    "height":2000,
                    "width":1500
                },
                "on":"http://www.example.org/iiif/book1/canvas/p3.json"
              }
            ],
            "otherContent": [
              {
                "@id":"http://www.example.org/iiif/book1/list/p3.json",
                "@type":"sc:AnnotationList"
              }
            ]
          }
        ]
      }
    ],
  "structures": [
    {
      "@id": "http://www.example.org/iiif/book1/range/r1.json",
        "@type":"sc:Range",
        "label":"Introduction",
        "canvases": [
          "http://www.example.org/iiif/book1/canvas/p1.json",
          "http://www.example.org/iiif/book1/canvas/p2.json",
          "http://www.example.org/iiif/book1/canvas/p3.json#xywh=0,0,750,300"
        ]
    }
  ]
}
```

##  A. Summary of URI Patterns

| Resource | URI Pattern |
| -------- | ----------- |
| Manifest | {scheme}://{host}/{prefix}/{identifier}/manifest.json |
| Sequence | {scheme}://{host}/{prefix}/{identifier}/sequence/{name}.json |
| Canvas | {scheme}://{host}/{prefix}/{identifier}/canvas/{name}.json |
| Content | {scheme}://{host}/{prefix}/{identifier}/res/{name}.{format} |
| Annotation | {scheme}://{host}/{prefix}/{identifier}/annotation/{name}.json |
| AnnotationList | {scheme}://{host}/{prefix}/{identifier}/list/{name}.json |
| Range | {scheme}://{host}/{prefix}/{identifier}/range/{name}.json |
| Layer | {scheme}://{host}/{prefix}/{identifier}/layer/{name}.json |

## B. Summary of Metadata Requirements

<ul class="legend">
<li>
  Mandatory/Required
  <div class="req mandatory">&nbsp;</div>
</li>
<li>
  <div class="req recommended"></div> Recommended
</li>
<li>
  <div class="req optional"></div> Optional
</li>
<li>
  <div class="req not-applicable"></div> Not Applicable

</li>
</ul>

<table class="image-api-table">
<tr>
  <th class="visibility-hidden"></th>
  <th colspan="3">Descriptive</th>
  <th colspan="2">Rights</th>
  <th colspan="7">Technical</th>
  <th colspan="3">Linking</th>
</tr>
<tr>
  <td class="visibility-hidden"></td>
  <td>label</td>
  <td>metadata</td>
  <td>description</td>
  <td>attributes</td>
  <td>license</td>
  <td>@id</td>
  <td>@type</td>
  <td>format</td>
  <td>height</td>
  <td>width</td>
  <td>viewDir.</td>
  <td>viewHint.</td>
  <td>service</td>
  <td>seeAlso</td>
  <td>within</td>
</tr>
<tr>
  <td>Manifest</td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req recommended"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
</tr>
<tr>
  <td>Sequence</td>
  <td><div class="req recommended"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req recommended"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
</tr>
<tr>
  <td>Canvas</td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
</tr>
<tr>
  <td>Annotation</td>
  <td><div class="req optional"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req recommended"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
</tr>
<tr>
  <td>AnnotationList</td>
  <td><div class="req optional"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
</tr>
<tr>
  <td>Range</td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
</tr>              <tr>
  <td>Layer</td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
</tr>              <tr>
  <td>Image Content</td>
  <td><div class="req optional"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req recommended"></div></td>
  <td><div class="req recommended"></div></td>
  <td><div class="req recommended"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
</tr>              <tr>
  <td>Other Content</td>
  <td><div class="req optional"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req mandatory"></div></td>
  <td><div class="req recommended"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req not-applicable"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
  <td><div class="req optional"></div></td>
</tr>
</table>

## C. Versioning

Starting with version 2.0, this specification follows [Semantic Versioning][25] with version numbers of the form "MAJOR.MINOR.PATCH" where:

  * MAJOR version increment indicates incompatible API changes.
  * MINOR version increment indicates addition of functionality in a backwards-compatible manner.
  * PATCH version increment indicates backwards-compatible bug fixes.

This versioning system will be implemented in the following ways:

  * The URI for context will be updated with major versions only, and otherwise edited in place.
  * URIs for the specifications will be updated with major and minor versions, with patch versions edited in place.
  * The protocol URI does not change with versioning.

## D. Acknowledgements

The production of this document was generously supported by a grant from the [Andrew W. Mellon Foundation][34].

Many thanks to Matthieu Bonicel, Tom Cramer, Ian Davis, Neil Jefferies, Sean Martin, Roger Mathisen, Mark Patton, Petter Rønningsen, and Stuart Snydman for your thoughtful contributions to the effort and written feedback.  Thanks also to the members of the IIIF for their continuous engagement, innovative ideas and feedback.

## E. ChangeLog

| Date | Editor |  Description |
| ---- | ------ | ------------ |
| 2014-06-01 | rsanderson | Vesion 2.0 (Triumphant Giraffe) released. |
| 2013-08-26 | rsanderson | Version 1.0 released. |
| 2013-06-14 | rsanderson | Version 0.9 released. |


</div>

   [1]: ../../annex/services/index.html
   [23]: http://iiif.io/img/image-api/icon-toc.png
   [24]: http://www.shared-canvas.org/
   [25]: http://iiif.io/img/metadata-api/iiif-objects.png
   [26]: http://iiif.io/api/image/
   [27]: http://iiif.io/img/metadata-api/iiif-objects-metadata.png
   [28]: http://tools.ietf.org/html/rfc5646
   [29]: http://www.shared-canvas.org/datamodel/iiif/implementation.html#frames
   [31]: http://iiif.io/api/image/1.1/#image-info-request
   [32]: http://www.openannotation.org/spec/core/core.html#BodyTargetType
   [33]: http://www.w3.org/TR/media-frags/#naming-space
   [34]: http://en.wikipedia.org/wiki/XPointer
   [35]: http://www.openannotation.org/spec/core/multiplicity.html#Choice
   [36]: http://www.shared-canvas.org/datamodel/iiif/usecases/foldouts.html
   [37]: http://iiif.io/img/metadata-api/iiif-objects-all.png

